feat: Improved docker base image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-# Use Hugging Face's Transformers PyTorch image as the base
-FROM huggingface/transformers-pytorch-gpu
+# Use lambda-stack as base image
+FROM lambda-stack:22.04
 
 # Set the working directory in the container
 WORKDIR /workspace
@@ -10,7 +10,6 @@ RUN pip install -r requirements.txt
 
 # Expose port 8888 for Jupyter Notebook
 EXPOSE 8888
-
 
 COPY start-jupyter.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/start-jupyter.sh
