--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.8'
 
 services:
-  huggingface-jupyter:
+  delta-ai:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: https://github.com/lambdal/lambda-stack-dockerfiles.git
+      dockerfile: Dockerfile.jammy
+    image: lambda-stack:22.04
     ports:
       - "8888:8888" # Port forwarding for Jupyter Notebook
     environment:
