refactor: Docker environment

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,13 +6,4 @@ WORKDIR /workspace
 
 # Install Packages
 COPY requirements.txt .
-RUN pip install -r requirements.txt
-
-# Expose port 8888 for Jupyter Notebook
-EXPOSE 8888
-
-COPY start-jupyter.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/start-jupyter.sh
-
-# Command to run Jupyter Notebook
-CMD ["start-jupyter.sh"]
+RUN pip install --force-reinstall -r requirements.txt
