--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,19 +6,17 @@ services:
       context: https://github.com/lambdal/lambda-stack-dockerfiles.git
       dockerfile: Dockerfile.jammy
     image: lambda-stack:22.04
-  aidx:
+  aidx-jupyter:
     build:
       context: .
       dockerfile: Dockerfile
     depends_on:
       - lambda-stack
-    ports:
-      - "8888:8888" # Port forwarding for Jupyter Notebook
-    environment:
-      - HOST_IP=${HOST_IP}
+    network_mode: "host"
     restart: always
     volumes:
       - /home/alan/workspace:/workspace
+    command: "jupyter notebook --allow-root --no-browser --ip=0.0.0.0 --port=8888 --NotebookApp.token='' --NotebookApp.password=''"
     deploy:
       resources:
         reservations:
