--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -8,16 +8,12 @@
             "lr": 1e-4,
             "betas": [0.9, 0.999],
             "eps": 1e-8,
-            "weight_decay": 0.01
-        }
+            "weight_decay": 0.01,
+        },
     },
     "scheduler": {
         "type": "WarmupLR",
-        "params": {
-            "warmup_min_lr": 0,
-            "warmup_max_lr": 1e-4,
-            "warmup_num_steps": 1000
-        }
+        "params": {"warmup_min_lr": 0, "warmup_max_lr": 1e-4, "warmup_num_steps": 1000},
     },
     "zero_optimization": {
         "stage": 2,
@@ -27,20 +23,20 @@
         "reduce_bucket_size": 2e8,
         "overlap_comm": true,
         "contiguous_gradients": true,
-        "cpu_offload": true
+        "cpu_offload": true,
     },
     "fp16": {
         "enabled": true,
         "loss_scale": 0,
         "loss_scale_window": 1000,
         "hysteresis": 2,
-        "min_loss_scale": 1
+        "min_loss_scale": 1,
     },
     "activation_checkpointing": {
         "partition_activations": true,
         "cpu_checkpointing": false,
         "contiguous_memory_optimization": false,
-        "synchronize_checkpoint_boundary": false
+        "synchronize_checkpoint_boundary": false,
     },
-    "wall_clock_breakdown": false
+    "wall_clock_breakdown": false,
 }
