fix: Allow for properly working training

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,10 @@
 # Use lambda-stack as base image
-FROM lambda-stack:22.04
+FROM nvidia/cuda:12.2.0-devel-ubuntu22.04
 
 # Set the working directory in the container
 WORKDIR /workspace
 
-# Install Packages
-COPY ../requirements.txt .
-RUN pip install --force-reinstall -r requirements.txt
+ADD . .
+
+# Install environment
+SHELL ["/bin/bash", "-c"]
