--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ../
       dockerfile: docker/Dockerfile
     image: tslaroadster/aidx-model-development:latest
+    platform: linux/amd64
     network_mode: "host"
     restart: on-failure
     volumes:
